<resources>
    <string name="app_name">Respira</string>
    <string name="dashboard_subtitle">Take a deep breath.</string>
    <string name="btn_quick_session">Quick Session</string>
    <string name="btn_library">Technique Library</string>
    <string name="library_title">My Techniques</string>
    <string name="dialog_add_title">New Technique</string>
    <string name="mode_desc">Switch Breathing Mode</string>
    <string name="default_instruction">Inhale</string>
    <string name="technique_standard">4&#8211;7&#8211;8 Relax</string>
    <string name="technique_box">Box Focus</string>
    <string name="phase_inhale">Inhale</string>
    <string name="phase_hold">Hold</string>
    <string name="phase_exhale">Exhale</string>
    <string name="phase_done">Done</string>
    <string name="default_timer">00s</string>
    <string name="btn_start">Begin Session</string>
    <string name="btn_stop">Stop Session</string>
    <string name="desc_info">Information</string>
    <string name="desc_settings">Settings</string>
    <string name="desc_options">Options</string>
    <string name="app_version">Version 1.0</string>
    <string name="pattern_format">In: %1$ds | Hold: %2$ds | Out: %3$ds</string>
</resources>